--- a/intex.html
+++ b/intex.html
@@ -2,18 +2,18 @@
 
 <html>
 	<head>
-		<title>Project name</title>
+		<title>Profilio</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	
 	<body>
 	
-		<h1> WELCOME TO</h1>
+		<h1> Anitson T T </br>Resume</h1>
 		
 		<div class="button">
 			
-			<a href="#" id="btn-menu" class="btn-open"></a>
+			<a href="#" id="btn-menu" class="btn-open">  OPEN </a>
 		
 		
 		</div>
