--- a/intex.html
+++ b/intex.html
@@ -5,15 +5,30 @@
 		<title>Profilio</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
 		<link rel="stylesheet" href="css/style.css">
+		
+		<style>
+		
+			body
+				{
+					background-image:url("images/hmpg.jpg");
+					background-position: center;
+					background-repeat: no-repeat;
+					background-size: cover;
+			    }
+		</style>
 	</head>
 	
 	<body>
-	
-		<h1> Anitson T T </br>Resume</h1>
 		
-		<div class="button">
+		
+		
+		<h1> Anitson T T </br>Resume</h1>
+
+		<marquee><h2><font color="yellow"> " What You Allow Is, What Will Continue. "</font></h2></marquee>
+		
+		<div class="button" style="background-image:url("images/img2.jpg")";>
 			
-			<a href="#" id="btn-menu" class="btn-open">  OPEN </a>
+			<a href="#" id="btn-menu" class="btn-open"><font color="white"> OPEN </font></a>
 		
 		
 		</div>
