--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 			  
 	</head>
 	<body bgcolor="#98fc03">
+		<center><b><p>Book Collection</p></b></center>
 		<div id="container" align="center">
 			<div class="thumbnails">
 				<img onmouseover="preview.src=img1.src" name="img1" src="images/img1.jpg" />
